# contalinhas

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanfile.txt  contaloc.sln  contaloc.vcxproj  contaloc.vcxproj.filters  filtro.ini  main.cpp  terminal.cpp  terminal.h
Debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  contaloc.psess  contaloc.sln  contaloc.vcxproj  contaloc.vcxproj.filters  contaloc190122.vsp  graph_info.json
Debug/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
Debug/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Debug/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Debug/contaloc.dir/Debug/contaloc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  contaloc.lastbuildstate  contaloc.write.1u.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/contaloc.dir/Release/contaloc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  contaloc.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
